[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/data/TheJewishBitmap/TheJewishBitmap.otf" type="FontFile" id=1]
[ext_resource path="res://game/ui/customizer/ItemFrame.gd" type="Script" id=2]
[ext_resource path="res://assets/images/mechas/legs/Percival/percival_leg.png" type="Texture2D" id=3]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
border_width_left = 3
border_width_right = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_bottom_left = 1
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
border_width_left = 4
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_bottom_left = 1
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_right = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_bottom_left = 1
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="FontFile" id=7]
size = 23
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=4]
size = 15
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="ItemFrame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -960.0
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
offset_right = 400.0
offset_bottom = 120.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[node name="PartLabel" type="Label" parent="."]
offset_left = 9.0
offset_top = 95.0
offset_right = 163.0
offset_bottom = 119.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "ML-01 Phoenix"

[node name="TaglineLabel" type="Label" parent="."]
offset_left = 9.0
offset_top = 75.0
offset_right = 141.0
offset_bottom = 95.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Heavy Shotgun"

[node name="ManufacturerLabel" type="Label" parent="."]
offset_left = 9.0
offset_top = 9.0
offset_right = 116.0
offset_bottom = 25.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Euromeccanica"

[node name="PartPreview" type="TextureRect" parent="."]
offset_left = 269.0
offset_top = 120.0
offset_right = 388.0
offset_bottom = 234.0
rotation = 270.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
